--- a/package.json
+++ b/package.json
@@ -49,5 +49,10 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "immutability-helper": "^3.1.1",
+    "react-dnd": "^9.3.2",
+    "react-dnd-html5-backend": "^9.3.2"
+  }
 }
